<resources>
    <string name="app_name">StreetReport</string>
    <string name="kakao_app_key">2fc5536ab99aa531bdcfee5694d60df6</string>
    <string name="menu_share">공유하기</string>
    <string name="share_img">사진을 첨부해주세요!</string>
    <string name="select_photo">사진 선택</string>
    <string name="share_content_hint">내용 입력...</string>
    <string name="add_location">위치 추가</string>
    <string name="type">유형분류</string>
    <string name="jaywalking">무단횡단 지역</string>
    <string name="schoolzone">스쿨존 지역</string>
    <string name="elder">노인 위험 지역</string>
    <string name="child">아이 위험 지역</string>
    <string name="etc">기타</string>

    <!--navbar string -->
    <string name="title_home">Home</string>
    <string name="title_share">신고</string>
    <string name="title_profile">마이페이지</string>
</resources>
