<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:configChanges="orientation|keyboard">

    <TextView
        android:id="@+id/share_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/share_img"
        android:textSize="@dimen/TextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:onClick="onClick"

            android:src="@drawable/camera" />

        <Button
            android:id="@+id/uploadPhoto"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/select_photo"
            android:textColor="@android:color/white"
            android:textSize="@dimen/TextSize" />
    </LinearLayout>


    <EditText
        android:id="@+id/report_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:hint="@string/share_content_hint"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:textColor="#2A2A2A"
        android:textColorHint="#D0D0D0" />


    <TextView
        android:id="@+id/add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:text="@string/add_location"
        android:textSize="@dimen/TextSize" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:background="@color/tableBorder" />

    <TextView
        android:id="@+id/reportTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:text="@string/type"
        android:textSize="@dimen/TextSize" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:stretchColumns="*">

        <View
            android:id="@+id/tableTopBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/tableBorder" />


        <TableRow>

            <Button
                android:id="@+id/type1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/trafficlight"
                android:maxHeight="30dp"
                android:text="@string/jaywalking" />

            <Button
                android:id="@+id/type2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/schoolzone"
                android:maxHeight="30dp"
                android:text="@string/schoolzone" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/type3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/elder"
                android:maxHeight="30dp"
                android:padding="@dimen/imgBtnPadding"
                android:scaleType="centerCrop"
                android:text="@string/elder" />

            <Button
                android:id="@+id/type4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/child"
                android:maxHeight="30dp"
                android:padding="@dimen/imgBtnPadding"
                android:scaleType="centerCrop"
                android:text="@string/child" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/type5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/etc"
                android:maxHeight="30dp"
                android:padding="@dimen/imgBtnPadding"
                android:scaleType="centerCrop"
                android:text="@string/etc" />

        </TableRow>

        <View
            android:id="@+id/tableBottomBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/tableBorder" />
    </TableLayout>


</LinearLayout>
